# cookie_pypackage

./: .gitignore  LICENSE  README.md  cookiecutter.json  requirements.txt  requirements_dev.txt
.github/ISSUE_TEMPLATE/: bug_report.md
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yml  .travis.yml  CHANGES.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tasks.py
{{cookiecutter.project_slug}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_slug}}/.github/workflows/: CI.yml  build.yml  docs.yml  lint.yml  release.yml
{{cookiecutter.project_slug}}/docs/: authors.md  changes.md  conf.py  contributing.md  index.md  index.rst
{{cookiecutter.project_slug}}/docs/docs/: index.md
{{cookiecutter.project_slug}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: _version.py
