[build-system]

requires = ["pip>=20.2.4", "setuptools>=50.3.2", "wheel>=0.35.1"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.nox
    | \.venv
    | \venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
