[versioneer]
VCS = git
style = pep440
versionfile_source = {{cookiecutter.project_slug}}/_version.py
versionfile_build = {{cookiecutter.project_slug}}/_version.py
tag_prefix = ''

[bdist_wheel]
universal = 1

[flake8]
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mpypy_cache,
    venv/,
    _version.py,
    versioneer.py,
    docs,
    site,
    .nox
max-complexity = 10
max-line-length = 100
extend-ignore =
    E203, # Black compatability whitespace before :
    W503, # Black compatability, line break before binary operator

[isort]
# Added for compatability with black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[mypy]
ignore_missing_imports = True

[mypy-{{cookiecutter.project_slug}}._version.*]
ignore_errors = True

[mypy-venv.*]
ignore_errors = True

[metadata]
description-file = README.md
license_file = LICENSE