[metadata]
name = {{cookiecutter.project_slug}}
version = "0.1.0"
description = {{cookiecutter.project_short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
url = {{cookiecutter.project_github_url}}
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
license = {{cookiecutter.open_source_license}}
classifiers =
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
test_suite = "tests"
project_urls = 
    Documentation = "https://{{cookiecutter.author_github_username}}.github.io/{{cookiecutter.project_slug}}/",

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
install_requires =

[options.extras_require]
dev = 
    bump2version>=1.0.1
    flake8>=3.8.4
    isort>=5.6.4
    nox>=2020.8.22
    black>=20.8b1
    twine>=3.2.0
    pytest>=6.1.2
    pytest-cov>=2.10.1
    mypy>=0.790
    mkdocs>=1.1.2
    mkdocs-material>=6.2.2
    mkdocstrings>=0.13.6
test =
    pytest>=6.1.2
    pytest-cov>=2.10.1
    coverage[toml]>=5.3.1
docs =
    mkdocs>=1.1.2
    mkdocs-material>=6.2.2
    mkdocstrings>=0.13.6
lint =
    flake8>=3.8.4
    isort>=5.6.4
    black>=20.8b1
    mypy>=0.790


[options.packages.find]
where = {{cookiecutter.project_slug}}
exclude =
    tests,
    docs

[bumpversion]
current_version = "0.1.0"
commit = True
tag = True

[bumpversion:file:setup.cfg]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:{{cookiecutter.project_slug}}/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = 
    .git,
    __pycache__,
    .pytest_cache,
    .mpypy_cache,
    venv/,
    .venv/,
    docs,
    site,
    .nox,
    *.egg,
    *.egg-info,
    build
max-complexity = 10
max-line-length = 88
extend-ignore =
    E203, # Black compatability: whitespace before :
    W503, # Black compatability: line break before binary operator

[coverage:run]
omit = 

[mypy]
# Ignore for 3rd party packages without type info
ignore_missing_imports = True

[mypy-venv.*]
# Ignore venv
ignore_errors = True

[mypy-.venv.*]
# Ignore .venv
ignore_errors = True
